# ohCaptain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setupCrossCompile.py
arm/boot/: uEnv.txt
arm/device-tree-overlay/: MTI-CATAMARAN-00A0.dts
arm/device-tree-overlay/dtbo/: MTI-CATAMARAN-00A0.dtbo
arm/modules-load.d/: ti_am335x_adc.conf
arm/udev/: 50-gpio.rules  51-gps.rules  52-capemgr.rules  capemgr  gpio_pin
cmake/: FindBoost.cmake  Toolchain_BBB.cmake
ohCaptain/: CMakeLists.txt  Doxyfile  Doxyfile.in
ohCaptain/doc/latex/: _actuator_8cpp.tex  _actuator_8cpp__incl.md5  _actuator_8h.tex  _actuator_8h__dep__incl.md5  _actuator_8h__incl.md5  _beaglebone_black_8cpp.tex  _beaglebone_black_8cpp__incl.md5  _beaglebone_black_8h.tex  _beaglebone_black_8h__dep__incl.md5  _beaglebone_black_8h__incl.md5  _boatswain_8cpp.tex  _boatswain_8cpp__incl.md5  _boatswain_8h.tex  _boatswain_8h__dep__incl.md5  _boatswain_8h__incl.md5  _captain_8cpp.tex  _captain_8cpp__incl.md5  _captain_8h.tex  _captain_8h__dep__incl.md5  _captain_8h__incl.md5  _communication_8cpp.tex  _communication_8cpp__incl.md5  _communication_8h.tex  _communication_8h__dep__incl.md5  _communication_8h__incl.md5  _controller_8cpp.tex  _controller_8cpp__incl.md5  _controller_8h.tex  _controller_8h__dep__incl.md5  _controller_8h__incl.md5  _exception_8h.tex  _exception_8h__dep__incl.md5  _exception_8h__incl.md5  _gps_8cpp.tex  _gps_8cpp__incl.md5  _gps_8h.tex  _gps_8h__dep__incl.md5  _gps_8h__incl.md5  _kalman_i_m_u_8cpp.tex  _kalman_i_m_u_8cpp__incl.md5  (+419 more)
ohCaptain/include/: Task.h
ohCaptain/include/Communication/: LoRa_RN2483.h
ohCaptain/include/Controllers/: BeagleboneBlack.h
ohCaptain/include/Core/: Actuator.h  Boatswain.h  Captain.h  Communication.h  Controller.h  Exception.h  Sensor.h  Task.h  Vessel.h  World.h  constants.h  literals.h
ohCaptain/include/Sensors/: Gps.h  KalmanIMU.h  NavilockNLX02.h  PT100.h  Razor.h
ohCaptain/include/Vessels/: Meetcatamaran.h
ohCaptain/src/: Task.cpp
ohCaptain/src/Communication/: LoRa_RN2483.cpp
ohCaptain/src/Controllers/: BeagleboneBlack.cpp
ohCaptain/src/Core/: Actuator.cpp  Boatswain.cpp  Captain.cpp  Communication.cpp  Controller.cpp  Sensor.cpp  Task.cpp  Vessel.cpp  World.cpp
ohCaptain/src/Sensors/: Gps.cpp  KalmanIMU.cpp  NavilockNLX02.cpp  PT100.cpp  Razor.cpp
ohCaptain/src/Vessels/: Meetcatamaran.cpp
ohCaptain/uml/: model.mdj
tools/: CMakeLists.txt
tools/LoRaRangeChecker/: CMakeLists.txt  main.cpp
unitTest/: CMakeLists.txt
unitTest/runTests/: CMakeLists.txt  Task_check.cpp  Tests.cpp
